--- a/gridstyle.css
+++ b/gridstyle.css
@@ -7,3 +7,51 @@ body{
     height: 100vh;
     width: 100vw;
 }
+.container{
+    background-color: lightslategrey;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    padding:2rem;
+    row-gap: 1rem;
+    column-gap: 2rem;;
+    /*grid-template-rows: 100px 100px;
+
+    grid-template-columns: 100px 100px 100px;*/
+     grid-template-columns: repeat(1, 1fr);
+     grid-template-rows: repeat(6, 1fr);
+   
+}
+.item{
+    background-color: coral;
+    border: 2px solid black;
+    color:white;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+@media(min-width:700px){
+    .container{
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    }
+    .header{
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+.footer{
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+.sidebar{
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+.title{
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+}
